--- a/DesignerRHN/DesignerRHN-war/web/personaindividual.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/personaindividual.xhtml
@@ -9,11 +9,6 @@
       xmlns:pe="http://primefaces.org/ui/extensions">
 
     <h:head>
-        <script>
-            function setFocusTo(id) {
-                document.getElementById(id).focus();
-            }
-        </script>
     </h:head>
     <h:body>
         <ui:composition template="/Template.xhtml">
@@ -171,9 +166,9 @@
                                     <div id="divFechaIngresoModPersonal" style="position: absolute; top:20px; left: 705px;">
                                         <lnk:calendar id="fechaIngresoModPersonal" value="#{controlPersonaIndividual.fechaIngreso}" >
                                             <p:ajax event="dateSelect" listener="#{controlPersonaIndividual.modificarFechaIngresoInformacionPersonal(10)}" 
-                                                    update="fechaIngresoModPersonal, estructuraModCargoDesempeñado" process="@this"/>
+                                                    update="fechaIngresoModPersonal" process="@this"/>
                                             <p:ajax event="change" listener="#{controlPersonaIndividual.modificarFechaIngresoInformacionPersonal(10)}" 
-                                                    update="fechaIngresoModPersonal, estructuraModCargoDesempeñado" process="@this"/>
+                                                    update="fechaIngresoModPersonal" process="@this"/>
                                         </lnk:calendar>
                                     </div>
 
