06 de Mayo de 2016 Ximena Valero Modificación de EmplTipoTrabajador en la carpeta personal pendientes por revisar

--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoTrabajador.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoTrabajador.xhtml
@@ -265,7 +265,7 @@
                                 <p:ajax event="dblclick" listener="#{controlVigenciaTipoTrabajador.asignarIndex(info, 0, 0, 2)}" immediate="true" process="@this"/>
                                 <p:ajax event="click"  listener="#{controlVigenciaTipoTrabajador.validarRegistroSeleccionadoRetirados()}" process="@this" immediate="true"/>
                             </p:inputText>
-                            <p:commandButton value="" actionListener="#{controlVigenciaTipoTrabajador.asignarIndex(info, 0, 0, 2)}" style="position: absolute; left: 393px; top: 41px; height: 23px; width: 23px; background-image: url(Imagenes/Iconos/lupa.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; 
+                            <p:commandButton id="btnMotivosRetiros" value="" actionListener="#{controlVigenciaTipoTrabajador.asignarIndex(info, 0, 0, 2)}" style="position: absolute; left: 393px; top: 41px; height: 23px; width: 23px; background-image: url(Imagenes/Iconos/lupa.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; 
                                              width: 23px; height: 23px;" immediate="true" process="@this"/>
                             <p:watermark for="motivoRetiro" value="#{msg['motivoretiroR']}" />
 
