--- a/DesignerRHN/DesignerRHN-war/web/EmplComprobante.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplComprobante.xhtml
@@ -8,7 +8,7 @@
       xmlns:lnk="http://java.sun.com/jsf/composite/linkare">
     <h:head>
     </h:head>
-    <h:body>
+    <h:body onload="iniciarScrollEmpleado();">
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
